--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "Django Tastypie models for Bookshelf",
   "main": "index.coffee",
+  "scripts": {
+    "lint": "coffeelint index.coffee models/"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tomi77/node-bookshelf-tastypie.git"
@@ -22,5 +25,8 @@
     "bookshelf-django": "^0.1.0",
     "coffee-script": "^1.10.0",
     "knex": "^0.11.9"
+  },
+  "devDependencies": {
+    "coffeelint": "^1.15.7"
   }
 }
