--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "prepare": "coffee --bare --compile --output . src/",
-    "lint": "coffeelint src/"
+    "lint": "coffeelint src/",
+    "test": "mocha --compilers coffee:coffee-script/register --require coffee-coverage/register-istanbul --recursive",
+    "coverage": "npm test && istanbul report",
+    "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
     "type": "git",
@@ -28,7 +31,17 @@
     "knex": "^0.13.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "coffee-coverage": "^2.0.1",
     "coffee-script": "^1.12.7",
-    "coffeelint": "^1.16.0"
+    "coffeelint": "^1.16.0",
+    "coveralls": "^2.13.1",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.5.3",
+    "sinon": "^3.3.0",
+    "sqlite3": "^3.1.11"
+  },
+  "dependencies": {
+    "uuid": "^3.1.0"
   }
 }
