--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "homepage": "https://github.com/tomi77/node-bookshelf-tastypie",
   "peerDependencies": {
     "bookshelf": "^0.10.4",
-    "bookshelf-django": "<0.2.0",
+    "bookshelf-django": ">=0.2.0",
     "knex": "^0.13.0"
   },
   "devDependencies": {
@@ -42,6 +42,9 @@
     "sqlite3": "^3.1.11"
   },
   "dependencies": {
+    "bookshelf": "^0.10.4",
+    "bookshelf-django": "^0.2.0",
+    "knex": "^0.13.0",
     "uuid": "^3.1.0"
   }
 }
